# nhttp3

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  progress.html
.github/workflows/: ci.yml  pages.yml
crates/nhttp3/: Cargo.toml
crates/nhttp3-core/: Cargo.toml
crates/nhttp3-core/src/: connection_id.rs  error.rs  lib.rs  varint.rs
crates/nhttp3-h3/: Cargo.toml
crates/nhttp3-h3/src/: error.rs  headers.rs  lib.rs
crates/nhttp3-h3/src/frame/: mod.rs  parse.rs
crates/nhttp3-qpack/: Cargo.toml
crates/nhttp3-qpack/src/: decoder.rs  encoder.rs  lib.rs
crates/nhttp3-qpack/src/table/: dynamic.rs  field.rs  mod.rs  static_.rs
crates/nhttp3-quic/: Cargo.toml
crates/nhttp3-quic/benches/: codec.rs  comparison.rs  connection.rs  results.json
crates/nhttp3-quic/src/: config.rs  endpoint.rs  io_loop.rs  lib.rs
crates/nhttp3-quic/src/connection/: cid_manager.rs  id_map.rs  inner.rs  migration.rs  mod.rs  state.rs
crates/nhttp3-quic/src/crypto/: key_update.rs  keys.rs  mod.rs  protection.rs  stateless_reset.rs
crates/nhttp3-quic/src/extensions/: datagram.rs  mod.rs  priority.rs
crates/nhttp3-quic/src/frame/: mod.rs  parse.rs  write.rs
crates/nhttp3-quic/src/packet/: builder.rs  header.rs  mod.rs  number.rs  validation.rs
crates/nhttp3-quic/src/qlog/: mod.rs
crates/nhttp3-quic/src/recovery/: ack.rs  bbr.rs  congestion.rs  cubic.rs  mod.rs  reno.rs
crates/nhttp3-quic/src/stream/: flow_control.rs  manager.rs  mod.rs  recv.rs  reset.rs  send.rs  state.rs
crates/nhttp3-quic/src/tls/: mod.rs  session.rs
crates/nhttp3-quic/src/transport/: error.rs  mod.rs  params.rs
crates/nhttp3-quic/tests/: endpoint_e2e.rs  quic_handshake.rs
crates/nhttp3/src/: lib.rs
docs/: gap-analysis.md
docs/guides/: browser.md  curl.md  nodejs-server.md  python-server.md  rust-server.md
docs/pages/: client.html  index.html
docs/pages/docs/: api.html  architecture.html  benchmarks.html  browser.html  concepts.html  curl.html  express.html  fastapi.html  getting-started.html  ollama.html  python-client.html  quickstart.html  rfcs.html  security.html  sglang.html  style.css
docs/superpowers/plans/: 2026-03-21-endpoint-benchmarks.md  2026-03-21-phase1-foundation.md
docs/superpowers/specs/: 2026-03-21-endpoint-benchmarks-design.md  2026-03-21-nhttp3-design.md
examples/client/: python_client.py
examples/curl/: README.md
examples/express/: package.json  server.js
examples/fastapi/: README.md  app.py  server.py  test_native.py
examples/nextjs/: README.md  package-lock.json  package.json
examples/nextjs/app/: layout.tsx  page.tsx
examples/nextjs/app/api/h3/: route.ts
examples/nextjs/app/api/h3/headers/: route.ts
examples/nextjs/app/api/h3/health/: route.ts
examples/nextjs/lib/: nhttp3.ts
examples/ollama/: proxy.py
examples/sglang/: server.py
examples/showcase/: index.html
nhttp3-ffi/: Cargo.toml
nhttp3-ffi/src/: error.rs  lib.rs  runtime.rs  types.rs
nhttp3-node/: .gitignore  Cargo.toml  index.d.ts  index.js  package-lock.json  package.json  test.js
nhttp3-node/src/: lib.rs
nhttp3-python/: .gitignore  Cargo.toml  pyproject.toml
nhttp3-python/python/nhttp3/: __init__.py  __init__.pyi  __main__.py
nhttp3-python/python/nhttp3/lib_nhttp3.dylib.dSYM/Contents/: Info.plist
nhttp3-python/src/: asgi.rs  async_bridge.rs  config.rs  connection.rs  endpoint.rs  lib.rs  stream.rs
nhttp3-server/: Cargo.toml
nhttp3-server/src/: benchmark.rs  client.rs  inference.rs  main.rs  ollama_proxy.rs  sglang_proxy.rs  showcase.rs
nhttp3-server/tests/: e2e.rs
nhttp3-wasm/: Cargo.toml
nhttp3-wasm/src/: config.rs  frame.rs  headers.rs  lib.rs
