[workspace]
resolver = "2"
members = [
    "crates/nhttp3-core",
    "crates/nhttp3-quic",
    "crates/nhttp3-qpack",
    "crates/nhttp3-h3",
    "crates/nhttp3",
    "nhttp3-ffi",
    "nhttp3-python",
    "nhttp3-wasm",
    "nhttp3-server",
    "nhttp3-node",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/ArnBon/nhttp3"
rust-version = "1.75"

[workspace.dependencies]
bytes = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
rustls = { version = "0.23", features = ["ring"] }
http = "1"
rcgen = "0.13"
criterion = { version = "0.5", features = ["html_reports"] }
quinn = "0.11"
h3 = "0.0.8"
h3-quinn = "0.0.10"
