[package]
name = "nhttp3-python"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Python bindings for nhttp3 via PyO3"

[lib]
name = "_nhttp3"
crate-type = ["cdylib"]

[dependencies]
nhttp3 = { path = "../crates/nhttp3" }
nhttp3-core = { path = "../crates/nhttp3-core" }
nhttp3-quic = { path = "../crates/nhttp3-quic" }
nhttp3-qpack = { path = "../crates/nhttp3-qpack" }
nhttp3-h3 = { path = "../crates/nhttp3-h3" }
nhttp3-ffi = { path = "../nhttp3-ffi" }
pyo3 = { version = "0.28", features = ["extension-module"] }
tokio = { workspace = true }
