[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "nhttp3"
version = "0.1.0"
description = "Production-grade HTTP/3 library for Python, powered by Rust"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Internet :: WWW/HTTP",
]

[project.scripts]
nhttp3 = "nhttp3.__main__:main"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "nhttp3._nhttp3"
