[package]
name = "nhttp3-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Working HTTP/3 server — quinn transport + nhttp3 protocol layers"

[[bin]]
name = "nhttp3-server"
path = "src/main.rs"

[[bin]]
name = "nhttp3-client"
path = "src/client.rs"

[[bin]]
name = "nhttp3-ollama"
path = "src/ollama_proxy.rs"

[[bin]]
name = "nhttp3-sglang"
path = "src/sglang_proxy.rs"

[[bin]]
name = "nhttp3-inference"
path = "src/inference.rs"

[[bin]]
name = "nhttp3-benchmark"
path = "src/benchmark.rs"

[dependencies]
# QUIC transport (proven, battle-tested)
quinn = { workspace = true }
h3 = { workspace = true }
h3-quinn = { workspace = true }

# Our protocol layers
nhttp3-qpack = { path = "../crates/nhttp3-qpack" }
nhttp3-h3 = { path = "../crates/nhttp3-h3" }
nhttp3-core = { path = "../crates/nhttp3-core" }

# Standard deps
tokio = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
clap = { version = "4", features = ["derive"] }
