[package]
name = "nhttp3-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Working HTTP/3 server — quinn transport + nhttp3 protocol layers"

[[bin]]
name = "nhttp3-server"
path = "src/main.rs"

[[bin]]
name = "nhttp3-client"
path = "src/client.rs"

[[bin]]
name = "nhttp3-inference"
path = "src/inference.rs"

[[bin]]
name = "nhttp3-benchmark"
path = "src/benchmark.rs"

[dependencies]
quinn = { workspace = true }
h3 = { workspace = true }
h3-quinn = { workspace = true }
nhttp3-qpack = { path = "../crates/nhttp3-qpack" }
nhttp3-h3 = { path = "../crates/nhttp3-h3" }
nhttp3-core = { path = "../crates/nhttp3-core" }
tokio = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
