[package]
name = "nhttp3-wasm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "WASM bindings for nhttp3"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nhttp3-core = { path = "../crates/nhttp3-core" }
nhttp3-qpack = { path = "../crates/nhttp3-qpack" }
nhttp3-h3 = { path = "../crates/nhttp3-h3" }
bytes = { workspace = true }
wasm-bindgen = "0.2"
