[package]
name = "nhttp3-h3"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "HTTP/3 protocol implementation for nhttp3 (RFC 9114)"

[dependencies]
nhttp3-core = { path = "../nhttp3-core" }
nhttp3-quic = { path = "../nhttp3-quic" }
nhttp3-qpack = { path = "../nhttp3-qpack" }
bytes = { workspace = true }
thiserror = { workspace = true }
http = { workspace = true }
