[package]
name = "nhttp3-qpack"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "QPACK header compression for HTTP/3 (RFC 9204)"

[dependencies]
nhttp3-core = { path = "../nhttp3-core" }
bytes = { workspace = true }
thiserror = { workspace = true }
