[package]
name = "nhttp3-quic"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "QUIC transport implementation for nhttp3"

[dependencies]
nhttp3-core = { path = "../nhttp3-core" }
bytes = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
rustls = { workspace = true }

[dev-dependencies]
rcgen = { workspace = true }
criterion = { workspace = true }
nhttp3-qpack = { path = "../nhttp3-qpack" }
http = { workspace = true }
h2 = "0.4"
tokio-rustls = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bench]]
name = "codec"
harness = false

[[bench]]
name = "connection"
harness = false

[[bench]]
name = "comparison"
harness = false
