[package]
name = "nhttp3"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Production-grade QUIC + HTTP/3 implementation in Rust"

[dependencies]
nhttp3-core = { path = "../nhttp3-core" }
nhttp3-quic = { path = "../nhttp3-quic" }
nhttp3-qpack = { path = "../nhttp3-qpack" }
nhttp3-h3 = { path = "../nhttp3-h3" }
